exports[`Login closes the Error Alert panel when close button is clicked 1`] = `
<Login>
  <div
    className="Login container">
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4">
        <div
          className="login-panel panel panel-default">
          <div
            className="panel-heading">
            <h3
              className="panel-title">
              Please sign in
            </h3>
          </div>
          <div
            className="panel-body">
            <form
              onSubmit={[Function]}
              role="form">
              <fieldset>
                <div
                  className="form-group">
                  <label
                    htmlFor="usernameInput">
                    Username
                  </label>
                  <input
                    className="form-control"
                    id="usernameInput"
                    onChange={[Function]}
                    placeholder="Username"
                    type="text" />
                </div>
                <div
                  className="form-group">
                  <label
                    htmlFor="passwordInput">
                    Password
                  </label>
                  <input
                    className="form-control"
                    id="passwordInput"
                    onChange={[Function]}
                    placeholder="Password"
                    type="password" />
                </div>
                <button
                  className="btn btn-default"
                  type="submit">
                  Submit
                </button>
              </fieldset>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4" />
    </div>
  </div>
</Login>
`;

exports[`Login renders correctly 1`] = `
<Login>
  <div
    className="Login container">
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4">
        <div
          className="login-panel panel panel-default">
          <div
            className="panel-heading">
            <h3
              className="panel-title">
              Please sign in
            </h3>
          </div>
          <div
            className="panel-body">
            <form
              onSubmit={[Function]}
              role="form">
              <fieldset>
                <div
                  className="form-group">
                  <label
                    htmlFor="usernameInput">
                    Username
                  </label>
                  <input
                    className="form-control"
                    id="usernameInput"
                    onChange={[Function]}
                    placeholder="Username"
                    type="text" />
                </div>
                <div
                  className="form-group">
                  <label
                    htmlFor="passwordInput">
                    Password
                  </label>
                  <input
                    className="form-control"
                    id="passwordInput"
                    onChange={[Function]}
                    placeholder="Password"
                    type="password" />
                </div>
                <button
                  className="btn btn-default"
                  type="submit">
                  Submit
                </button>
              </fieldset>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4" />
    </div>
  </div>
</Login>
`;

exports[`Login renders when state.error is set 1`] = `
<Login>
  <div
    className="Login container">
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4">
        <div
          className="login-panel panel panel-default">
          <div
            className="panel-heading">
            <h3
              className="panel-title">
              Please sign in
            </h3>
          </div>
          <div
            className="panel-body">
            <form
              onSubmit={[Function]}
              role="form">
              <fieldset>
                <div
                  className="form-group">
                  <label
                    htmlFor="usernameInput">
                    Username
                  </label>
                  <input
                    className="form-control"
                    id="usernameInput"
                    onChange={[Function]}
                    placeholder="Username"
                    type="text" />
                </div>
                <div
                  className="form-group">
                  <label
                    htmlFor="passwordInput">
                    Password
                  </label>
                  <input
                    className="form-control"
                    id="passwordInput"
                    onChange={[Function]}
                    placeholder="Password"
                    type="password" />
                </div>
                <button
                  className="btn btn-default"
                  type="submit">
                  Submit
                </button>
              </fieldset>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4">
        <Alert
          bsClass="alert"
          bsStyle="danger"
          closeLabel="Close alert"
          id="errorClose"
          onDismiss={[Function]}>
          <div
            className="alert alert-danger alert-dismissable"
            id="errorClose"
            role="alert">
            <button
              aria-hidden="true"
              className="close"
              onClick={[Function]}
              tabIndex="-1"
              type="button">
              <span>
                ×
              </span>
            </button>
            <h4>
              Username is incorrect.
            </h4>
            <button
              className="close sr-only"
              onClick={[Function]}
              type="button">
              Close alert
            </button>
          </div>
        </Alert>
      </div>
    </div>
  </div>
</Login>
`;

exports[`Login renders when state.error is set 2`] = `
<Login>
  <div
    className="Login container">
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4">
        <div
          className="login-panel panel panel-default">
          <div
            className="panel-heading">
            <h3
              className="panel-title">
              Please sign in
            </h3>
          </div>
          <div
            className="panel-body">
            <form
              onSubmit={[Function]}
              role="form">
              <fieldset>
                <div
                  className="form-group">
                  <label
                    htmlFor="usernameInput">
                    Username
                  </label>
                  <input
                    className="form-control"
                    id="usernameInput"
                    onChange={[Function]}
                    placeholder="Username"
                    type="text" />
                </div>
                <div
                  className="form-group">
                  <label
                    htmlFor="passwordInput">
                    Password
                  </label>
                  <input
                    className="form-control"
                    id="passwordInput"
                    onChange={[Function]}
                    placeholder="Password"
                    type="password" />
                </div>
                <button
                  className="btn btn-default"
                  type="submit">
                  Submit
                </button>
              </fieldset>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4">
        <Alert
          bsClass="alert"
          bsStyle="danger"
          closeLabel="Close alert"
          id="errorClose"
          onDismiss={[Function]}>
          <div
            className="alert alert-danger alert-dismissable"
            id="errorClose"
            role="alert">
            <button
              aria-hidden="true"
              className="close"
              onClick={[Function]}
              tabIndex="-1"
              type="button">
              <span>
                ×
              </span>
            </button>
            <h4>
              Error: Username is incorrect.
            </h4>
            <button
              className="close sr-only"
              onClick={[Function]}
              type="button">
              Close alert
            </button>
          </div>
        </Alert>
      </div>
    </div>
  </div>
</Login>
`;

exports[`Login renders when state.password is changed 1`] = `
<Login>
  <div
    className="Login container">
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4">
        <div
          className="login-panel panel panel-default">
          <div
            className="panel-heading">
            <h3
              className="panel-title">
              Please sign in
            </h3>
          </div>
          <div
            className="panel-body">
            <form
              onSubmit={[Function]}
              role="form">
              <fieldset>
                <div
                  className="form-group">
                  <label
                    htmlFor="usernameInput">
                    Username
                  </label>
                  <input
                    className="form-control"
                    id="usernameInput"
                    onChange={[Function]}
                    placeholder="Username"
                    type="text" />
                </div>
                <div
                  className="form-group">
                  <label
                    htmlFor="passwordInput">
                    Password
                  </label>
                  <input
                    className="form-control"
                    id="passwordInput"
                    onChange={[Function]}
                    placeholder="Password"
                    type="password" />
                </div>
                <button
                  className="btn btn-default"
                  type="submit">
                  Submit
                </button>
              </fieldset>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4" />
    </div>
  </div>
</Login>
`;

exports[`Login renders when state.username is changed 1`] = `
<Login>
  <div
    className="Login container">
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4">
        <div
          className="login-panel panel panel-default">
          <div
            className="panel-heading">
            <h3
              className="panel-title">
              Please sign in
            </h3>
          </div>
          <div
            className="panel-body">
            <form
              onSubmit={[Function]}
              role="form">
              <fieldset>
                <div
                  className="form-group">
                  <label
                    htmlFor="usernameInput">
                    Username
                  </label>
                  <input
                    className="form-control"
                    id="usernameInput"
                    onChange={[Function]}
                    placeholder="Username"
                    type="text" />
                </div>
                <div
                  className="form-group">
                  <label
                    htmlFor="passwordInput">
                    Password
                  </label>
                  <input
                    className="form-control"
                    id="passwordInput"
                    onChange={[Function]}
                    placeholder="Password"
                    type="password" />
                </div>
                <button
                  className="btn btn-default"
                  type="submit">
                  Submit
                </button>
              </fieldset>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row">
      <div
        className="col-md-4 col-md-offset-4" />
    </div>
  </div>
</Login>
`;
